# logos-view-module-runtime

./: CMakeLists.txt  README.md  flake.nix
include/: LogosQmlBridge.h  LogosViewPlugin.h  LogosViewReplicaFactory.h  ViewModuleHost.h
nix/: default.nix  test.nix
src/: LogosQmlBridge.cpp  ViewModuleHost.cpp
tests/: CMakeLists.txt  test_logos_qml_bridge.cpp  test_view_module_host.cpp
ui-host/: main.cpp
